# ceresagri

./: .env.example  .gitignore  README-public.md  README.md  pyproject.toml
ceresagri/: __init__.py  config.py  ecmwf_climate.py  evapotranspiration.py  sentinel1_radar.py  sentinel_client.py  sentinel_download.py  time_series.py  vegetation_indices.py
data/ecmwf/: jidvei_climate_et0.csv  jidvei_era5land_daily.csv
data/ndvi/: jidvei_ndvi_timeseries.csv
data/parcels/: jidvei_test_parcel.geojson
data/sentinel1/: jidvei_s1_timeseries.csv
docs/: raport_tehnic_trl3.md
notebooks/: 01_sentinel2_first_steps.ipynb
notes/: day2_observations.md
scripts/: plot_fusion_optic_radar.py  plot_integrated_dashboard.py  plot_ndvi_timeseries.py  quick_ndvi_view.py  test_cds_api.py  test_cds_timeseries_small.py
