[project]
name = "ceresagri"
version = "0.1.0"
description = "Earth observation platform for European agricultural monitoring and CAP compliance"
authors = [
    { name = "Automation Technologies Engineering S.R.L.", email = "traian.conchi@atc-e.com" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }

dependencies = [
    "rasterio>=1.4.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "fiona>=1.10.0",
    "xarray>=2024.10.0",
    "rioxarray>=0.17.0",
    "sentinelhub>=3.11.0",
    "pystac-client>=0.8.5",
    "eodag>=3.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "folium>=0.17.0",
    "contextily>=1.6.0",
    "cdsapi>=0.7.0",
    "xclim>=0.53.0",
    "pyfao56>=1.4.0",
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "weasyprint>=63.0",
    "jinja2>=3.1.0",
    "reportlab>=4.2.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.66.0",
    "rich>=13.9.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "netcdf4>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipywidgets>=8.1.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ceresagri"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["ceresagri", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
